# KadBot

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CALENDAR.md  LICENSE  Makefile  README.md  crm_calendar.py  crm_notify.py  crm_sync.py  db.py  download_documents.py  env.example  health_check.py  init_db.py  kad_case.html  kad_cases.db  logic.py  main.py  migrate_db.py  models.py  parser.py  parser_new.py  parser_old.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  test_notify.py  test_parser.py  utils.py
debug/: debug_А55-15891_2025.html
kadbot/: cli.py  config.py  logging_config.py  utils.py
kadbot/crm/: calendar.py  client.py  notify.py  sync.py
kadbot/db/: init_db.py  migrate.py  models.py  session.py
kadbot/kad/: parser.py
kadbot/legacy/: logic.py  parser_old.py
kadbot/services/: documents.py
tests/: test_crm_notify.py  test_crm_sync.py  test_parser_utils.py
